Fix breakages with qt5.11-rc2

On Qt5.11, there was a change at the way qPrintable() works.
There, the var using it should be already a QString() type,
not allowing implicit conversions.

With that, some usages of qPrintable() are invalid for qt5.11,
as the vars to be printed are either enums or integers.

BUG: 393222

Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>